refactor: toList() 메서드 반영 (#30